[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
cursor-icon = "1.1.0"
env_logger = "0.11.8"
futures = { version = "0.3.31", features = ["executor"] }
image = "0.25.6"
log = "0.4.27"
raw-window-handle = "0.6.2"
softbuffer = "0.4.6"
tracing = "0.1.41"
wgpu = "25.0.0"
winit = { version = "0.30.10", features = ["wayland", "x11"] }
